--- a/EXT-Selfies.css
+++ b/EXT-Selfies.css
@@ -1,8 +1,10 @@
 #EXT-SELFIES {
-  position:absolute;
+  position:fixed;
   width:100%;
   height:100%;
-  background-color:rgba(0, 0, 0, 0.7);
+  background-color:rgba(0, 0, 0, 0.95);
+  top:0;
+  left:0;
   display:none;
 }
 
