--- a/EXT-Selfies.css
+++ b/EXT-Selfies.css
@@ -124,25 +124,25 @@
   background-size: 100%;
   width: 70px;
   height: 70px;
-  margin-right: 20px;
   background-repeat: no-repeat;
-  margin-left: 10px;
+  margin: 10px;
+  z-index: 1;
 }
 
 #EXT-SELFIES-VALIDATE {
   background-size: 100%;
   width: 70px;
   height: 70px;
-  margin-right: 20px;
   background-repeat: no-repeat;
-  margin-left: 10px;
+  margin: 10px;
+  z-index: 1;
 }
 
 #EXT-SELFIES-EXIT {
   background-size: 100%;
   width: 70px;
   height: 70px;
-  margin-right: 20px;
   background-repeat: no-repeat;
-  margin-left: 10px;
+  margin: 10px;
+  z-index: 1;
 }
