--- a/EXT-Selfies.css
+++ b/EXT-Selfies.css
@@ -63,6 +63,24 @@
   line-height: 80%;
 }
 
+#EXT-SELFIES .preview {
+  z-index: 0;
+  position: absolute;
+  width: 70%;
+  height: 70%;
+  top: 5%;
+  left: 5%;
+  box-sizing: border-box;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  display:none;
+}
+
+#EXT-SELFIES .preview.shown {
+display:block;
+}
+
 #EXT-SELFIES .result {
   z-index: 0;
   position: absolute;
