--- a/testage.css
+++ b/testage.css
@@ -1,172 +1,200 @@
-/*@import url("https://fonts.googleapis.com/css?family=Open+Sans");*/
-
+#EXT-SELFIES-TEST *,
+#EXT-SELFIES-TEST *:before,
+#EXT-SELFIES-TEST *:after {
+	 box-sizing: border-box;
+	 margin: 0;
+	 padding: 0;
+}
 #EXT-SELFIES-TEST {
-  /*background: black*/
+	 background: #000;
+	 font-family: Helvetica, Arial, sans-serif;
+   display: none;
+}
+
+#EXT-SELFIES-TEST.shown {
+  display: block;
+}
+
+#EXT-SELFIES-TESTAGE.google {
+	 position: absolute;
+	 left: 50%;
+	 top: 50%;
+	 width: 600px;
+	 height: 150px;
+	 margin-top: -75px;
+	 padding: 10px;
+	 border-radius: 20px;
+	 transform: translateX(-50%);
+}
+#EXT-SELFIES-TESTAGE .google__colored-blocks {
+	 overflow: hidden;
+	 position: absolute;
+	 left: 50%;
+	 top: 0;
+	 width: 600px;
+	 height: 100%;
+	 margin-left: -300px;
+	 padding: 10px;
+	 border-radius: 20px;
+	 perspective: 1000px;
+	 animation: googleAnim 5s ease-in-out, googleContAnim 5s;
+}
+#EXT-SELFIES-TESTAGE .google__colored-blocks-rotater {
+	 position: absolute;
+	 left: 0;
+	 top: 0;
+	 width: 100%;
+	 height: 100%;
+	 border-radius: inherit;
+	 animation: googleRotation 1.3s linear infinite;
+}
+#EXT-SELFIES-TESTAGE .google__colored-blocks-inner {
+	 overflow: hidden;
+	 position: relative;
+	 height: 100%;
+	 background: #000;
+	 border-radius: inherit;
+}
+#EXT-SELFIES-TESTAGE .google__colored-block {
+	 position: absolute;
+	 left: 50%;
+	 top: 50%;
+	 width: 300%;
+	 height: 300%;
+	 transform-origin: 0 0;
+}
+#EXT-SELFIES-TESTAGE .google__colored-block:nth-child(1) {
+	 transform: rotate(0deg) skewX(0deg);
+	 background-color: #3cba54;
+}
+#EXT-SELFIES-TESTAGE .google__colored-block:nth-child(2) {
+	 transform: rotate(90deg) skewX(0deg);
+	 background-color: #f4c20d;
+}
+#EXT-SELFIES-TESTAGE .google__colored-block:nth-child(3) {
+	 transform: rotate(180deg) skewX(0deg);
+	 background-color: #db3236;
+}
+#EXT-SELFIES-TESTAGE .google__colored-block:nth-child(4) {
+	 transform: rotate(270deg) skewX(0deg);
+	 background-color: #4885ed;
+}
+#EXT-SELFIES-TESTAGE .google__inner {
+	 overflow: hidden;
+	 position: relative;
+	 width: 100%;
+	 height: 100%;
+}
+#EXT-SELFIES-TESTAGE .google__numbers {
+	 overflow: visible;
+	 position: absolute;
+	 left: 50%;
+	 top: 50%;
+	 width: 100px;
+	 height: 100px;
+	 margin-left: -50px;
+	 margin-top: -50px;
+}
+#EXT-SELFIES-TESTAGE .google__numbers-path {
+	 fill: none;
+	 stroke-width: 10px;
+	 stroke: #fff;
+	 stroke-linecap: round;
+	 stroke-linejoin: round;
+	 stroke-dasharray: 0, 518.055065155;
+	 stroke-dashoffset: 0;
+	 animation: googleNumAnim 5s ease-in-out;
+	 opacity: 0;
+}
+#EXT-SELFIES-TESTAGE .google__text {
+	 position: absolute;
+	 left: 50%;
+	 top: 0;
+	 width: 600px;
+	 height: 100%;
+	 margin-left: -300px;
+	 text-align: center;
+	 line-height: 150px;
+	 font-size: 100px;
+	 color: #fff;
+	 text-transform: uppercase;
+	 letter-spacing: 15px;
+	 transform: translateX(10px);
+	 animation: googleHideText 5s;
+}
+ @keyframes googleContAnim {
+	 15%, 100% {
+		 margin-left: -300px;
+		 width: 600px;
+	}
+	 25%, 90% {
+		 margin-left: -75px;
+		 width: 150px;
+	}
+}
+ @keyframes googleNumAnim {
+	 15% {
+		 stroke-dasharray: 0, 518.055065155;
+		 stroke-dashoffset: 0;
+		 opacity: 0;
+	}
+	 25%, 41% {
+		 opacity: 1;
+		 stroke-dasharray: 144.4256591797, 518.055065155;
+		 stroke-dashoffset: -40;
+	}
+	 53%, 66% {
+		 stroke-dasharray: 136.0216217041, 518.055065155;
+		 stroke-dashoffset: -227.238697052;
+	}
+	 76% {
+		 stroke-dasharray: 113.4751205444, 518.055065155;
+		 stroke-dashoffset: -445.8995704651;
+	}
+	 88%, 100% {
+		 stroke-dasharray: 72.1554946899, 518.055065155;
+		 stroke-dashoffset: -445.8995704651;
+	}
+	 92% {
+		 opacity: 1;
+	}
+	 100% {
+		 opacity: 0;
+	}
+}
+ @keyframes googleRotation {
+	 to {
+		 transform: rotate(360deg);
+	}
+}
+ @keyframes googleAnim {
+	 15% {
+		 border-radius: 20px;
+		 transform: rotate(0);
+	}
+	 30%, 43% {
+		 border-radius: 50%;
+		 transform: rotate(360deg);
+	}
+	 52%, 65% {
+		 border-radius: 0;
+		 transform: rotate(720deg);
+	}
+	 78%, 90% {
+		 border-radius: 50%;
+		 transform: rotate(1080deg);
+	}
+	 100% {
+		 border-radius: 20px;
+		 transform: rotate(1440deg);
+	}
+}
+ @keyframes googleHideText {
+	 15%, 100% {
+		 opacity: 1;
+	}
+	 20%, 96% {
+		 opacity: 0;
+	}
 }
  
-#EXT-SELFIES-TEST.container {
-  position: absolute;
-  height: 350px;
-  width: 400px;
-  margin: auto;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#EXT-SELFIES-TESTAGE.dot {
-    height: 5px;
-    width: 5px;
-    background: #CC2B4A;
-    border-radius: 50%;
-    animation: scaling 6s;
-    animation-fill-mode: forwards;
-}
-
-#EXT-SELFIES-TEST.container::before {
-    padding-right: 190px;
-    position: absolute;
-    top: 35%;
-    right: 30%;
-    font-size: 60px;
-    font-family: "Open Sans";
-    color: #CC2B4A;
-    content: "5";
-    animation: swiping 6s;
-    animation-fill-mode: forwards;
-}
-
-@keyframes scaling {
-  14.2% {
-    background: #20FBC9;
-    transform: scale(1.3) translateX(0);
-    opacity: 1;
-  }
-  28.4% {
-    background: #CC2B4A;
-    transform: scale(1.6) translateX(0);
-    opacity: 1; 
-  }
-  42.6% {
-    background: #20FBC9;
-    transform: scale(1.9) translateX(0);
-    opacity: 1; 
-  }
-  56.8% {
-    background: #CC2B4A;
-    transform: scale(2.2) translateX(0);
-    opacity: 1; 
-  }
-  71% {
-    background: #452cdb;
-    transform: scale(10) translateX(-10px);
-    opacity: 1;
-  }
-  85.2% {
-    background: #452cdb;
-    transform: scale(1) translateX(90px);
-    opacity: 1;
-  }
-  100% {
-    background: #452cdb;
-    transform: scale(1) translateX(70px);
-    opacity: 0;
-  }
-  /*
-  66.4% {
-    background: #CC2B4A;
-    transform: scale(3.5) translateX(0);
-    opacity: 1;
-  }
-  74.7% {
-    background: #20FBC9;
-    transform: scale(4) translateX(0);
-    opacity: 1;
-  }
-  83% {
-    background: #452cdb;
-    transform: scale(10) translateX(-10px);
-    opacity: 1;
-  }
-  90% {
-    background: #452cdb;
-    transform: scale(1) translateX(90px);
-    opacity: 1;
-  }
-  100% {
-    background: #452cdb;
-    transform: scale(1) translateX(90px);
-    opacity: 0; 
-  }
-  */
-}
-
-@keyframes swiping {
-  14.2% {
-    color: #20FBC9;
-    content: "4";
-    transform: translateX(260px);
-  }
-  28.4% {
-    color: #CC2B4A;
-    content: "3";
-    transform: translateX(0);
-  }
-  42.6% {
-    color: #20FBC9;
-    content: "2";
-    transform: translateX(260px);
-  }
-  56.8% {
-    color: #CC2B4A;
-    content: "1";
-    transform: translateX(0);
-  }
-  71% {
-    color: #CC2B4A;
-    content: "";
-    transform: translateX(220px);
-  }
-  85.2% {
-    color: #CC2B4A;
-    content: "";
-    transform: translateX(90);
-  }
-  100% {
-    color: #452cdb;
-    content: "Smiles!";
-    /*content: "DONE";*/
-    transform: translateX(210px); 
-  }
-  /*
-  66.4% {
-    color: #CC2B4A;
-    content: "9";
-    transform: translateX(0);
-  }
-  74.7% {
-    color: #20FBC9;
-    content: "10";
-    transform: translateX(260px); 
-  }
-  74.8% {
-    color: #CC2B4A;
-    content: "";
-    transform: translateX(220px);
-  }
-  80.1% {
-    color: #CC2B4A;
-    content: "";
-    transform: translateX(90px);
-  }
-  100% {
-    color: #452cdb;
-    content: "DONE";
-    transform: translateX(190px);
-  }
-  */
-}
